samples/_failures_safe/1761399300_4b555d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7aa039f3.c: In function ‘main’:
./samples/SAFE/__tmp_7aa039f3.c:156:17: error: expected expression at end of input
  156 |                 } else
      |                 ^
./samples/SAFE/__tmp_7aa039f3.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7aa039f3.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7aa039f3.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7aa039f3.c:156:17: error: expected declaration or statement at end of input
